sidebar spacing fix

--- a/ontour/src/index.css
+++ b/ontour/src/index.css
@@ -118,7 +118,12 @@ body {
 }
 
 #upcoming {
-  margin-top: 20px;
+  margin-top: 25px;
+  margin-bottom: 25px;
+}
+
+#upcoming-shows {
+  margin-top: 5px;
   margin-bottom: 20px;
 }
 
@@ -263,7 +268,7 @@ body {
 
 #writebutton{
   padding-top: 5px;
-  margin-bottom: 30px;
+  margin-bottom: 35px;
   color: white;
 }
 
